Download service: fix an issue when calling CancelDownload.

CancelDownload can be called before content layer persist the record in
history db, the canceled download will be recognized as external and
thus block all background download.

This CL filtered the canceled download with an existing cache in download
driver.

TBR=phajdan.jr@chromium.org

Bug: 776716
Change-Id: Ib6476180a4b7db728fa6750264f0893384eb6633
Reviewed-on: https://chromium-review.googlesource.com/738589
Commit-Queue: Xing Liu <xingliu@chromium.org>
Reviewed-by: David Trainor <dtrainor@chromium.org>
Cr-Commit-Position: refs/heads/master@{#513177}
Former-commit-id: fee6aea330ee3a9c96873172afb9119ed3e3b8fb