components/download/content/internal/download_driver_impl.cc
@@ -266,6 +266,15 @@ void DownloadDriverImpl::OnDownloadRemoved(content::DownloadManager* manager,
 
 void DownloadDriverImpl::OnDownloadCreated(content::DownloadManager* manager,
                                            content::DownloadItem* item) {
+  if (guid_to_remove_.find(item->GetGuid()) != guid_to_remove_.end()) {
+    // Client has removed the download before content persistence layer created
+    // the record, remove the download immediately.
+    base::ThreadTaskRunnerHandle::Get()->PostTask(
+        FROM_HERE, base::Bind(&DownloadDriverImpl::DoRemoveDownload,
+                              weak_ptr_factory_.GetWeakPtr(), item->GetGuid()));
+    return;
+  }
+
   // Listens to all downloads.
   DCHECK(client_);
   DriverEntry entry = CreateDriverEntry(item);
